# arxiv-rag

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile.api  Dockerfile.frontend  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-images.yml  ci.yml  deploy.yml  evaluate.yml
docs/: record_demo.md
nginx/: app.conf.template
scripts/: evaluate.py  generate_testset.py  ingest.py
scripts/deploy/: ec2-bootstrap.sh  init-letsencrypt.sh  vm-bootstrap.sh
src/: __init__.py  config.py  logging_conf.py  types.py
src/api/: deps.py  main.py  schemas.py
src/api/routes/: papers.py  query.py
src/db/: __init__.py  models.py  repository.py  session.py
src/embeddings/: __init__.py  embedder.py  vector_store.py
src/evaluation/: __init__.py  generated_test_set.json  judge.py  ragas_eval.py  test_set.py
src/frontend/: app.py
src/generation/: __init__.py  chain.py  llm.py  prompts.py
src/ingestion/: __init__.py  arxiv_client.py  chunker.py  pdf_parser.py
src/retrieval/: __init__.py  hybrid_search.py  reranker.py
tests/: conftest.py  test_api.py  test_chain_smoke.py  test_chunker.py  test_hybrid_search.py  test_llm_backends.py  test_reranker.py
